--- a/DESF.csproj
+++ b/DESF.csproj
@@ -43,7 +43,7 @@
     <Compile Include="Flow\Calendar\Calendar.cs" />
     <Compile Include="Flow\Calendar\Term.cs" />
     <Compile Include="Flow\Event\EventEmmitingProvider.cs" />
-    <Compile Include="Flow\Event\EventHandler.cs" />
+    <Compile Include="Flow\Event\ReflectiveEventDispatcher.cs" />
     <Compile Include="Flow\Event\SEvent.cs" />
     <Compile Include="Flow\Event\IEventEmmiter.cs" />
     <Compile Include="Flow\Event\IEventHandler.cs" />
