--- a/DESF.csproj
+++ b/DESF.csproj
@@ -47,6 +47,8 @@
     <Compile Include="Flow\Event\SEvent.cs" />
     <Compile Include="Flow\Event\IEventEmmiter.cs" />
     <Compile Include="Flow\Event\IEventHandler.cs" />
+    <Compile Include="Object\Queue\IQueue.cs" />
+    <Compile Include="Object\Queue\IQueueable.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Subject\Logger\ConsoleLogger.cs" />
     <Compile Include="Subject\Logger\ILogContributor.cs" />
@@ -57,7 +59,6 @@
   <ItemGroup>
     <Folder Include="Object\Agent\" />
     <Folder Include="Object\Proccessor\" />
-    <Folder Include="Object\Queue\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
