--- a/DESF.csproj
+++ b/DESF.csproj
@@ -58,7 +58,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Object\Agent\" />
-    <Folder Include="Object\Proccessor\" />
+    <Folder Include="Object\Processor\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
