--- a/DESF.csproj
+++ b/DESF.csproj
@@ -65,6 +65,9 @@
     <Folder Include="Object\Agent\" />
     <Folder Include="Object\Processor\" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="readme.markdown" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
